# comfyui-lifegame

./: README.md  README_EN.md  __init__.py  pyproject.toml  requirements.txt
.github/workflows/: publish.yml
comfyui_nodes/: __init__.py  lifegame_node.py
examples/: lifegame.json
server/: __init__.py  api.py  lifegame_logic.py
web/: lifegame-ui.js  lifegame.css  lifegame.js  lifegame_preview.js  templates.js  utils.js
