[project]
name = "lifegame"
description = ""
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["numpy>=1.22.0", "Pillow>=9.0.0", "aiohttp>=3.8.0"]

[project.urls]
Repository = "https://github.com/assemly/comfyui-lifegame"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-lifegame"
Icon = ""
